# generic-arraydeque

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: ci.yml  coverage.yml  loc.yml
ci/: miri_sb.sh  miri_tb.sh  sanitizer.sh
integration-bin/: Cargo.toml
integration-bin/src/: main.rs
src/: drain.rs  extract_if.rs  heap_tests.rs  into_iter.rs  io.rs  iter.rs  iter_mut.rs  lib.rs  macros.rs  serde.rs  tests.rs  unstable.rs
src/unstable/: extract_if.rs
tests/: serde.rs
