[package]
name = "generic-arraydeque"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/generic-arraydeque"
homepage = "https://github.com/al8n/generic-arraydeque"
documentation = "https://docs.rs/generic-arraydeque"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
categories = ["data-structures", "collections", "no-std", "no-std::no-alloc"]

[features]
default = ["std"]
alloc = []
std = []

unstable = []
zeroize = ["generic-array/zeroize"]
faster-hex = ["generic-array/faster-hex"]

serde = ["dep:serde_core"]

[dependencies]
generic-array = { version = "1.3", default-features = false }
rustversion = "1"

serde_core = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.7"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }
